<resources>
    <string name="app_name">ToEgypt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="packagename"><b>Package 1</b></string>
    <string name="end"><b>End 8/6/2017 12:00</b></string>
    <string name="start"><b>Start 1/6/2017 12:00</b></string>
    <string name="price"><b>21,829 USD</b></string>
    <string name="deleteUser"><b>select user to delete or reset Password</b></string>
    <string name="updateGuide"><b>Select Guide to edit</b></string>
    <string name="updatePackage"><b>Select Package to edit</b></string>
    <string name="updatePlace">select place to edit</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="the_logo">the_Logo</string>
    <string name="title_top">Top fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user_spinner_title">Select Country</string>
    <string name="placegovernorate_spinner_title">Select Governorate</string>
    <string name="place_spinner_title">Select Category</string>
    <string name="title_activity_user">UserActivity</string>
</resources>
