<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/filter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="28sp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <EditText
                android:id="@+id/usr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="20sp"
                android:textSize="16sp"
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22sp"
                android:inputType="text"
                android:background="#0000"
                android:padding="16sp"
                android:drawableRight="@drawable/user"
                android:layout_marginRight="35sp" />

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:layout_height="1sp"
                android:background="#ADCCE2" />

            <EditText
                android:id="@+id/user_password"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22sp"
                android:inputType="textPassword"
                android:textColor="#ADCCE2"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16sp"
                android:drawableRight="@drawable/password"
                android:layout_marginRight="35sp" />

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:layout_height="1sp"
                android:layout_marginBottom="10sp"
                android:background="#ADCCE2" />

            <Button
                android:id="@+id/sing_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/angle"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:padding="16sp"
                android:layout_marginBottom="28sp"
                android:layout_marginTop="32sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="150sp"
            android:layout_height="140sp"
            android:background="@drawable/logo"
            android:layout_marginTop="19sp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/the_logo" />


        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            android:textColor="#c4c5c9"
            android:gravity="center"
            android:layout_above="@+id/sin_up"
            android:paddingBottom="16sp" />

        <TextView
            android:id="@+id/sin_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:textColor="#54abee"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45sp"
            android:clickable="true" />

    </RelativeLayout>
</FrameLayout>
