<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_bg_package"
        android:orientation="vertical"
        android:id="@+id/linearLayoutPackage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <customfonts.TextView_Lato
                    android:id="@+id/pckgname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/packagename"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <customfonts.TextView_Lato
                    android:id="@+id/placesinpckg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="pyramids, sinai, Egyptian Museum"
                    android:textColor="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <customfonts.Textview_lato_thin
                        android:id="@+id/start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/start"
                        android:textColor="#00B873"
                        android:layout_weight="0.88" />

                    <customfonts.Textview_lato_thin
                        android:id="@+id/end"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/end"
                        android:textColor="#6c1faf"
                        android:layout_weight="0.43" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#E3E3E3"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/clock"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/clock_package" />

            <customfonts.TextView_Lato
                android:id="@+id/timetostart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="6h 21m"

                android:textColor="#2c2c2c"
                android:layout_weight="0.7" />


            <customfonts.TextView_Lato
                android:id="@+id/price"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:text="@string/price"
                android:textColor="#2c2c2c"
                android:textSize="15dp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>